--- a/index.css
+++ b/index.css
@@ -12,6 +12,8 @@ h1 {
     font-weight: 400;
     font-size: 40px;
     padding: 10px 15px;
+    max-width: 900px;
+    margin: 0 auto;
 }
 
 ul {
@@ -39,7 +41,8 @@ ul {
 
 .working-space {
     position: relative;
-    max-width: 700px;
+    max-width: 900px;
+    margin: 0 auto;
 }
 
 .working-space-img {
